--- a/index.html
+++ b/index.html
@@ -7,77 +7,87 @@
     <link rel="icon" href="icono_videojuegos.png" sizes="32x32" type="png">
     <style>
     body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f2f2f2;
     }
 
     header {
-    text-align: center;
-    position: relative;
+        text-align: center;
+        position: relative;
     }
 
     header h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #fff;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 20px;
     }
 
     header img {
-    width: 100%;
+        width: 100%;
+    }
+
+    .header-info {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        color: #fff;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 10px;
+        border-radius: 5px;
     }
 
     nav {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
 
     nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
     }
 
     nav ul li {
-    display: inline;
-    margin-right: 20px;
+        display: inline;
+        margin-right: 20px;
     }
 
     nav ul li a {
-    color: #fff;
-    text-decoration: none;
+        color: #fff;
+        text-decoration: none;
     }
 
     section {
-    padding: 20px;
-    text-align: justify;
+        padding: 20px;
+        text-align: justify;
     }
 
     h2 {
-    text-align: center;
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 20px;
+        text-align: center;
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        border-radius: 5px;
+        margin-bottom: 20px;
     }
 
     footer {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
     }
     </style>
 </head>
@@ -86,6 +96,8 @@
 <header>
     <h1>Contacto</h1>
     <img src="videogames.jpg" alt="Imagen de videojuegos">
+    <div class="header-info" id="header-info">
+    </div>
 </header>
 
 <nav>
@@ -106,6 +118,18 @@
 <footer>
     <p>&copy; 2024 Videojuegos más vendidos. Todos los derechos reservados.</p>
 </footer>
+
+<script>
+    function updateTime() {
+        const now = new Date();
+        const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric', hour12: true };
+        const formattedDate = now.toLocaleDateString('es-ES', options);
+
+        document.getElementById("header-info").innerText = "Fecha y hora actual: " + formattedDate;
+    }
+    setInterval(updateTime, 1000);
+    updateTime();
+</script>
 
 </body>
 </html>
